added comma separator

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This app will expose rest api end point, modify required file and upload it to aws s3",
   "main": "main.js",
   "scripts": {
-    "start": "node ./main/main.js",
-    "test": "test"
+    "start": "node ./main/startServer.js",
+    "test": "node ./test/mainTest"
   },
   "author": "Amanuel G. okubamichael",
   "license": "ISC",
@@ -13,8 +13,11 @@
     "@hapi/hapi": "^20.1.3",
     "aws-sdk": "^2.905.0",
     "axios": "^0.21.1",
-    "csvtojson": "^2.0.0",
-    "json-2-csv": "^3.11.1",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@hapi/code": "^8.0.3",
+    "@hapi/lab": "^24.2.1",
+    "sinon": "^10.0.0"
   }
 }
